fix cache dependency

--- a/.github/workflows/deploy-firebase.yml
+++ b/.github/workflows/deploy-firebase.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: '16'
           cache: npm
+          cache-dependency-path: ./functions/package-lock.json
       - name: Install
         run: npm ci
       - name: Install firebase tools
